--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
+/*BASE CSS*/
+@import './assets/style/base/colors';
+@import './assets/style/base/typography';
+
+/*VENDORS CSS*/
+@import './assets/style/vendor/fx-aligner-core';
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
