--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,10 @@
 @import './assets/style/base/colors';
 @import './assets/style/base/typography';
 
-/*VENDORS CSS*/
-@import './assets/style/vendor/fx-aligner-core';
 
 /* You can add global styles to this file, and also import other style files */
+
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
