--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,13 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+[class*='main']{
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
+  background: #ddd;
+}
