--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button mat-button (click)="doExit()">SAIR</button>
+    <button mat-button (click)="logout()">SAIR</button>
   </mat-toolbar-row>
 
 </mat-toolbar>
